syntax = "proto3";

package dealer;

option go_package = "g38_lottery_service/internal/proto/generated/dealer";

// 遊戲階段
enum GameStage {
  // 主遊戲流程階段
  GAME_STAGE_UNSPECIFIED = 0;
  GAME_STAGE_PREPARATION = 1;
  GAME_STAGE_NEW_ROUND = 2;
  GAME_STAGE_CARD_PURCHASE_OPEN = 3;
  GAME_STAGE_CARD_PURCHASE_CLOSE = 4;
  GAME_STAGE_DRAWING_START = 5;
  GAME_STAGE_DRAWING_CLOSE = 6;

  // 額外球流程階段
  GAME_STAGE_EXTRA_BALL_PREPARE = 7;
  GAME_STAGE_EXTRA_BALL_SIDE_SELECT_BETTING_START = 8;
  GAME_STAGE_EXTRA_BALL_SIDE_SELECT_BETTING_CLOSED = 9;
  GAME_STAGE_EXTRA_BALL_WAIT_CLAIM = 10;
  GAME_STAGE_EXTRA_BALL_DRAWING_START = 11;
  GAME_STAGE_EXTRA_BALL_DRAWING_CLOSE = 12;

  // 派彩與JP流程階段
  GAME_STAGE_PAYOUT_SETTLEMENT = 13;
  GAME_STAGE_JACKPOT_START = 14;
  GAME_STAGE_JACKPOT_DRAWING_START = 15;
  GAME_STAGE_JACKPOT_DRAWING_CLOSED = 16;
  GAME_STAGE_JACKPOT_SETTLEMENT = 17;
  GAME_STAGE_DRAWING_LUCKY_BALLS_START = 18;
  GAME_STAGE_DRAWING_LUCKY_BALLS_CLOSED = 19;

  // 結束階段
  GAME_STAGE_GAME_OVER = 20;
}

// 額外球選邊
enum ExtraBallSide {
  EXTRA_BALL_SIDE_UNSPECIFIED = 0;
  EXTRA_BALL_SIDE_LEFT = 1;
  EXTRA_BALL_SIDE_RIGHT = 2;
}

// 遊戲事件類型
enum GameEventType {
  GAME_EVENT_TYPE_UNSPECIFIED = 0;
  GAME_EVENT_TYPE_STAGE_CHANGED = 1;
  GAME_EVENT_TYPE_BALL_DRAWN = 2;
  GAME_EVENT_TYPE_GAME_CREATED = 3;
  GAME_EVENT_TYPE_GAME_CANCELLED = 4;
  GAME_EVENT_TYPE_GAME_COMPLETED = 5;
  GAME_EVENT_TYPE_EXTRA_BALL_SIDE_SELECTED = 6;
} 